--- a/views/stats.pug
+++ b/views/stats.pug
@@ -4,4 +4,26 @@ block content
   script(src="/javascripts/responder.js")
   div.main(style="width: 100%; height:100%; overflow:hidden;")
     div(style="position: absolute; top:0px; bottom:0px; left:0px; right:0px; background: url('/icons/commonwealth-park-canberra-act-bike-paths-events-p11.jpg')")
-      div(style="position: absolute; top:30px; height:50px; left:30px; right:30px; background-color:black; color:white; border:solid; opacity:0.3;")
+      div(style="position: absolute; top:30px; height:76px; left:30px; right:30px; background-color:black; color:white; border:solid; opacity:0.7;")
+    div(style="position: absolute; top:46px; left: 50px;")
+      img(src="/icons/bicycle-rider.svg" style="height:48px; width:48px;")
+    div(style="position: absolute; top:-2px; left: 120px; color:white; font-size:48px;")
+      p Competitor - #{user.displayName}
+    div(style="position: absolute; top:40px; right:50px; border: solid; color: white; padding:10px;")
+      a(href="/logout" style="color: white; font-size: 32px; font-weight: bold; text-decoration: none; ") Logout
+
+    div#competitor
+      div(style="position:relative; top:30px; left:30px;")
+        img(src="/icons/user.svg" style="width:140px; height:140px;")
+      div(style="position:relative; top:30px; left:80px;")
+        p #{user.name.givenName} #{user.name.familyName}
+
+    div#competitors
+      each athlete in athletes
+        div(style="border: solid; height:150px; margin:20px; padding:20px; width:100%;")
+          div(style="position:absolute; margin:20px; opacity:1.0;")
+            img(src=`${athlete.profile}` style="width:120px; height:120px;")
+          div(style="position:absolute; left:220px; opacity:1.0; padding:0px;")
+            p #{athlete.firstname} #{athlete.lastname}
+            p #{athlete.city}, #{athlete.state}, #{athlete.country}
+
