Added Azure Blob

--- a/views/index.pug
+++ b/views/index.pug
@@ -4,5 +4,10 @@ block content
   script(src="/javascripts/responder.js")
   div.main(style="width: 100%; height:100%; overflow:hidden;")
     div(style="position: absolute; top:0px; bottom:0px; left:0px; right:0px; background: url('/icons/commonwealth-park-canberra-act-bike-paths-events-p11.jpg')")
+      div(style="position: absolute; top:30px; height:76px; left:30px; right:30px; background-color:black; color:white; border:solid; opacity:0.7;")
+      div(style="position: absolute; top:46px; left: 50px;")
+        img(src="/icons/bicycle-rider.svg" style="height:48px; width:48px;")
+      div(style="position: absolute; top:-2px; left: 120px; color:white; font-size:48px;")
+        p Hamish Podger's Competition Ladder 
       div(style="position: absolute; top:45%; left:45%; border: solid; color: white; padding:10px;")
         a(href="/auth/strava" style="color: white; font-size: 48px; font-weight: bold; text-decoration: none; ") Login
