--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   script(src="/javascripts/responder.js")
   div.main(style="width: 100%; height:100%; overflow:hidden;")
-    div(style="position: absolute; top:0px; bottom:0px; left:0px; right:0px; background: url('/icons/commonwealth-park-canberra-act-bike-paths-events-p11.jpg')")
+    div(style="position: absolute; top:0px; bottom:0px; left:0px; right:0px; background: url('/icons/commonwealth-park-canberra-act-bike-paths-events-p11.jpg'); background-size: cover;  background-repeat: no-repeat;")
       div(style="position: absolute; top:30px; height:76px; left:30px; right:30px; background-color:black; color:white; border:solid; opacity:0.7;")
       div(style="position: absolute; top:46px; left: 50px;")
         img(src="/icons/bicycle-rider.svg" style="height:48px; width:48px;")
