--- a/views/index.pug
+++ b/views/index.pug
@@ -8,6 +8,6 @@ block content
       div(style="position: absolute; top:46px; left: 50px;")
         img(src="/icons/bicycle-rider.svg" style="height:48px; width:48px;")
       div(style="position: absolute; top:-2px; left: 120px; color:white; font-size:48px;")
-        p Hamish Podger's Competition Ladder 
+        p Azure - Competition Manager 
       div(style="position: absolute; top:45%; left:45%; border: solid; color: white; padding:10px;  background-color:black; opacity:0.7;")
         a(href="/auth/strava" style="color: white; font-size: 48px; font-weight: bold; text-decoration: none;") Login
