--- a/views/stats.pug
+++ b/views/stats.pug
@@ -17,43 +17,51 @@ block content
       a(href="/logout" style="color: white; font-size: 32px; font-weight: bold; text-decoration: none; ") Logout
 
     div#competitor
-      div(style="position:relative; top:30px; left:30px;")
+      div(style="position:absolute; top:30px; left:30px;")
         if user._json.profile == 'avatar/athlete/large.png'
           img(src="/icons/user.svg" style="width:140px; height:140px;")
         else
           img(src=`${user.photos[0].value}` style="z-order:10; width:140px; height:140px; opacity:1.0;")
         p 
         b #{user.name.givenName} #{user.name.familyName}
-      div(style="position:relative; top:-10px; left:130px; font-size:32px; ")
-        p
+      div(style="position:absolute; top:20px; left:330px; font-size:32px; ")
         b Cycling
-      div(style="position:relative; top:55px; left:40px;")
+      div(style="position:absolute; top:50px; left:360px;")
         p Rides:
         p Distance:
         p Elapsed:
-      div(style="position:relative; top:55px; left:70px;")
+      div(style="position:absolute; top:50px; left:480px;")
         p #{stats.ytd_ride_totals.count}
         p #{stats.ytd_ride_totals.distance}
         p #{stats.ytd_ride_totals.elapsed_time}
-      div(style="position:relative; top:-10px; left:130px; font-size:32px; ")
-        p
+      div(style="position:absolute; top:20px; left:610px; font-size:32px; ")
         b Running
-      div(style="position:relative; top:55px; left:170px;")
+      div(style="position:absolute; top:50px; left:640px;")
         p Runs:
         p Distance:
         p Elapsed:
-      div(style="position:relative; top:55px; left:200px;")
+      div(style="position:absolute; top:50px; left:760px;")
         p #{stats.ytd_run_totals.count}
         p #{stats.ytd_run_totals.distance}
         p #{stats.ytd_run_totals.elapsed_time}
-      div(style="position:relative; top:-10px; left:350px; font-size:32px; ")
-        p
+      div(style="position:absolute; top:20px; left:890px; font-size:32px; ")
+        b Swimming
+      div(style="position:absolute; top:50px; left:920px;")
+        p Swims:
+        p Distance:
+        p Elapsed:
+      div(style="position:absolute; top:50px; left:1040px;")
+        p #{stats.ytd_swim_totals.count}
+        p #{stats.ytd_swim_totals.distance}
+        p #{stats.ytd_swim_totals.elapsed_time}
+        
+      div(style="position:absolute; top:20px; right:600px; font-size:32px; ")
         b Points
-      div(style="position:relative; top:55px; left:270px;")
+      div(style="position:absolute; top:50px; right:570px;")
         p Ride:
         p Distance:
         p Total:
-      div(style="position:relative; top:55px; left:300px;")
+      div(style="position:absolute; top:50px; right:540px;")
         p 0
         p 0
         p 0
@@ -64,17 +72,19 @@ block content
         p 2
 
     div#competitors
-      each athlete in athletes
-        div(style="border: solid; height:150px; margin:20px; padding:20px; width:100%;")
-          div(style="position:absolute; margin:20px; opacity:1.0;")
-            if athlete.profile == 'avatar/athlete/large.png'
-              img(src="/icons/user.svg" style="width:120px; height:120px;")
-            else
-              img(src=`${athlete.profile}` style="width:120px; height:120px;")
-          div(style="position:absolute; left:220px; opacity:1.0; padding:0px;")
-            p #{athlete.firstname} #{athlete.lastname}
-            p #{athlete.city}, #{athlete.state}, #{athlete.country}
-          
-          div(style="position:absolute; top:50px; right:50px; width:145px; height:145px; padding:0px; color:white; border:solid; font-size:84px; background-color:white; opacity:0.7; text-align:center; font-weight: bold;")
-            p(style="color:black; margin-top:30px;") !
- 
+      each activity in activities
+        div(style="border: solid; height:350px; margin:20px; padding:20px; width:100%;")
+          div(style="position:relative; width:100%; height:100%;")
+            div(style="position:absolute; top:10px; left:20px;")
+              p Name:
+              p Date:
+              p Distance:
+              p Moving (Time):
+              p Elapsed (Time):
+            div(style="position:absolute; top:10px; left:230px;")
+              p #{activity.name} 
+              p #{activity.start_date}
+              p #{activity.distance}
+              p #{activity.moving_time}
+              p #{activity.elapsed_time}
+    
