--- a/views/stats.pug
+++ b/views/stats.pug
@@ -64,6 +64,8 @@ block content
 
     div#competitors
       each activity in activities
+        - var mapID = 'map-' + activity.id
+
         div(style="width:95%;")
           div(style="border: solid; height:350px; margin:20px; padding:20px; width:100%;")
             div(style="position:relative; width:100%; height:100%;")
@@ -79,6 +81,7 @@ block content
                 p #{activity.distance}
                 p #{activity.moving_time}
                 p #{activity.elapsed_time}
+              div(style="position:absolute; top:10px; right:80px;")
 
   script(src="/modules/jquery/dist/jquery.min.js")
   script(src="/modules/leaflet/dist/leaflet.js")  
