--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,6 +3,8 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/styles.css')
+    link(rel='stylesheet', href='/modules/leaflet/dist/leaflet.css')
+
  
   body
     block content
