--- a/public/stylesheets/modal.css
+++ b/public/stylesheets/modal.css
@@ -19,6 +19,7 @@
     background-color: #fefefe;
     margin: auto;
     padding: 0;
+    top: 150px;
     border: 1px solid #888;
     width: 70%;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
@@ -32,7 +33,7 @@
     padding: 2px 16px;
     background-color: #5cb85c;
     color: white;
-}
+ }
 
 .modal-body {padding: 16px 20px; display:block;}
 
