--- a/views/stats.pug
+++ b/views/stats.pug
@@ -1,8 +1,29 @@
 extends layout
 
 block content
-  script(src="/javascripts/responder.js")
-  div.main(style="width: 100%; height:100%; overflow:hidden;")
+  div.main(style="width: 100%; height:100%; z-index:99; overflow:hidden;")
+  -function prettyDate(dateString){
+    //if it's already a date object and not a string you don't need this line:
+    -var date = new Date(dateString);
+    -var d = date.getDate();
+    -var monthNames = [ "Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec" ];
+    -var m = monthNames[date.getMonth()];
+    -var y = date.getFullYear();
+    -var h = date.getHours();
+     -var min = date.getMinutes();
+ 
+    -return d + ' ' + m + ' ' + y + ' - ' + h + ':' + min;
+
+  -}
+
+    div#mapDialog(class="modal")
+      div(class="modal-content" style="width:900px; height:785px;")
+        div(class="modal-header")
+          span.mapViewerClose(class="close") &times;
+          h2 Map Viewer
+        div(class="modal-body")        
+          div#map(style="width:860px; height:660px;")
+
     div(style="position: absolute; top:0px; bottom:0px; left:0px; right:0px; background: url('/icons/commonwealth-park-canberra-act-bike-paths-events-p11.jpg'); background-size: cover;  background-repeat: no-repeat;")
       div(style="position: absolute; top:30px; height:76px; left:30px; right:30px; background-color:black; color:white; border:solid; opacity:0.7;")
     div(style="position: absolute; top:46px; left: 50px;")
@@ -17,7 +38,7 @@ block content
       a(href="/logout" style="color: white; font-size: 32px; font-weight: bold; text-decoration: none; ") Logout
 
     div#competitor
-      div(style="position:absolute; top:30px; left:30px;")
+      div(style="position:absolute; top:20px; left:30px;")
         if user._json.profile == 'avatar/athlete/large.png'
           img(src="/icons/user.svg" style="width:140px; height:140px;")
         else
@@ -65,9 +86,12 @@ block content
     div#competitors
       each activity in activities
         - var mapID = 'map-' + activity.id
+        - var graphTimeID = 'graph-time-' + activity.id
+        - var graphDistanceID = 'graph-distance-' + activity.id
+        - var formattedDate = prettyDate(activity.start_date)
 
         div(style="width:95%;")
-          div(style="border: solid; height:350px; margin:20px; padding:20px; width:100%;")
+          div(style="border: solid; height:330px; margin:5px; padding:10px; width:100%;")
             div(style="position:relative; width:100%; height:100%;")
               div(style="position:absolute; top:10px; left:20px;")
                 p Name:
@@ -77,14 +101,41 @@ block content
                 p Elapsed (Time):
               div(style="position:absolute; top:10px; left:230px;")
                 p #{activity.name} 
-                p #{activity.start_date}
+                p #{formattedDate}
                 p #{activity.distance}
                 p #{activity.moving_time}
                 p #{activity.elapsed_time}
-              div(style="position:absolute; top:10px; right:80px;")
+              
+              div(style="position:absolute; top:24px; right:280px; width:530px; height:530px;")
+                canvas(id=`${graphTimeID}`)
+
+              div(style="position:absolute; top:24px; right:40px; width:530px; height:530px;")
+                canvas(id=`${graphDistanceID}`)
+ 
+              div(id=`${mapID}` style="position:absolute; top:10px; right:10px; hcolor:white; border:solid" )
+                button(onclick='$(this).Show("' +  activity.id + '");')  
+                  img(src="/icons/placeholder.svg" style="height:96px; width:96px;")
+        
+  script.
+    var trips = {};
+  each activity in activities
+    script.
+      trips["#{activity.id}"] = {
+          id : "#{activity.id}",
+          distance : "#{activity.distance}",
+          start : "#{activity.start_latlng}",
+          end : "#{activity.end_latlng}",
+          total_elevation_gain : "#{activity.total_elevation_gain}",
+          eval_low : "#{activity.eval_low}",
+          eval_high : "#{activity.eval_high}",
+          elapsed_time : "#{activity.elapsed_time}",
+          ployline : "#{activity.map.summary_polyline}"
+      }
 
   script(src="/modules/jquery/dist/jquery.min.js")
   script(src="/modules/leaflet/dist/leaflet.js")  
+  script(src="/modules/chart.js/dist/Chart.js") 
+  script(src="/javascripts/PolyLine.encoded.js")
   script(src="/javascripts/responder.js")
 
 
